--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,20 @@
 == README
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+This is a development app for Scrivito.
 
-Things you may want to cover:
+== Installation
 
-* Ruby version
+* download onto your Mac
 
-* System dependencies
+* run 'bundle'
+You may need to install gems locally (see Gemfile for details)
 
-* Configuration
+* create an .env file with your API credentials for a fresh Scrivito tenant
 
-* Database creation
+* run 'rake cms:migrate:install'
 
-* Database initialization
+* run 'rake cms:migrate'
 
-* How to run the test suite
+* run 'rails s'
 
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+* open in your browser: http://localhost:3000/?_scrivito_workspace_id=rtc
