update to using scrivito 0.30.0

--- a/README.rdoc
+++ b/README.rdoc
@@ -11,7 +11,7 @@ You may need to install gems locally (see Gemfile for details)
 
 * create an .env file with your API credentials for a fresh Scrivito tenant
 
-* run 'rake cms:migrate'
+* run 'rake scrivito:migrate'
 
 * run 'rails s'
 
