preparing direct deployment to heroku

--- a/README.rdoc
+++ b/README.rdoc
@@ -1,10 +1,20 @@
 == README
 
-This is a development app for Scrivito.
+This is a sample app and theme for Scrivito.
 
-== Installation
+== Take this app for a Test Drive!
 
-* download onto your Mac
+* Deploy to heroku:
+
+[![Deploy](https://www.herokucdn.com/deploy/button.png)](https://heroku.com/deploy)
+
+* open your app's config variables settings on the Heroku Platform API (https://dashboard-next.heroku.com/apps)
+
+* fill in your Scrivito CMS credentials (Log in or sign up at htts://scrivito.com, display full API keys of your CMS)
+
+== Local Installation
+
+* download onto your machine
 
 * run 'bundle'
 You may need to install gems locally (see Gemfile for details)
@@ -16,3 +26,4 @@ You may need to install gems locally (see Gemfile for details)
 * run 'rails s'
 
 * open in your browser: http://localhost:3000/?_scrivito_workspace_id=rtc
+
